--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100%;
+  margin: 0 0;
+  padding: 0rem;
   text-align: center;
+
+  width: 100%;
+    height: 100vh;
 }
 
 .logo {
@@ -39,4 +42,15 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+#navbarNav > ul > li.menu-navegacao > a{
+
+  color: #198754;
+}
+
+#navbarNav > ul > li.menu-navegacao > a:hover{
+  color: #000000;
+
 }
